tests/build/cases/widget_new/incorrect_when_expr_type1.stderr
error[E0277]: the trait bound `impl zero_ui::var::Var<SideOffsets>: zero_ui::var::Var<bool>` is not satisfied
  --> cases/widget_new/incorrect_when_expr_type1.rs:14:14
   |
10 |       let _ = Wgt! {
   |  _____________-
11 | |         margin = 0;
12 | |         background_color = colors::BLACK;
13 | |
14 | |         when *#margin {
   | |              ^ the trait `zero_ui::var::Var<bool>` is not implemented for `impl zero_ui::var::Var<SideOffsets>`
15 | |             background_color = colors::WHITE;
16 | |         }
17 | |     };
   | |_____- required by a bound introduced by this call
   |
   = help: the following other types implement trait `zero_ui::var::Var<T>`:
            <implementers-list>
note: required by a bound in `when_condition_expr_var`
  --> $WORKSPACE/zng-app/src/widget/builder.rs
   |
   | pub fn when_condition_expr_var(expr_var: impl Var<bool>) -> BoxedVar<bool> {
   |                                               ^^^^^^^^^ required by this bound in `when_condition_expr_var`
